--- a/src/Src/InstructionsView.fx.yaml
+++ b/src/Src/InstructionsView.fx.yaml
@@ -51,12 +51,12 @@ InstructionsView As screen:
         Y: =136
         ZIndex: =3
 
-    Icon1 As icon.People:
+    Icon2 As icon.BookmarkFilled:
         Color: =RGBA(255, 255, 255, 1)
-        Height: =154
-        Icon: =Icon.People
-        Width: =128
-        X: =1158
-        Y: =537
-        ZIndex: =4
+        Height: =102
+        Icon: =Icon.BookmarkFilled
+        Width: =105
+        X: =1128
+        Y: =543
+        ZIndex: =5
 
