--- a/src/Src/BoardView.fx.yaml
+++ b/src/Src/BoardView.fx.yaml
@@ -9,6 +9,13 @@
             }
         );
         
+        // popupPlanning
+        UpdateContext(
+            {
+                popUpPlanningEnable: false
+            }
+        );
+        
         // token
         UpdateContext(
             {
@@ -434,7 +441,18 @@
                             roundStatus:GameStatusType.STARTED,
                             turnStatus: GameStatusType.NOT_STARTED
                         });
-                        
+                        // -------- Validate round type
+                        If(
+                            // IS PLANNING
+                            Index(Rounds, currentRound).type = RoundType.PLANNING,
+                            UpdateContext({
+                                popUpEnable: true,
+                                popUpTitle: Index(Rounds, currentRound).name,
+                                popUpMessage: "Please move the tasks to handle in this Sprint during your turn"
+                            })
+                            ,
+                            true
+                        );
                     )
                 Text: |-
                     =If(
@@ -458,7 +476,14 @@
                     =// Update status
                     UpdateContext({
                         turnStatus: GameStatusType.STARTED
-                    })
+                    });
+                    
+                    If(
+                        Index(Rounds, currentRound).type = RoundType.PLANNING,
+                        UpdateContext({
+                            popUpPlanningEnable:true
+                        })
+                    );
                 Text: ="Start Turn"
                 X: =295
                 Y: =311
@@ -499,28 +524,6 @@
                 X: =788
                 Y: =322
                 ZIndex: =38
-
-            Button1 As button:
-                OnSelect: |-
-                    =UpdateContext({
-                        popUpEnable: true,
-                        popUpMessage: "Testing"
-                    })
-                Text: ="Prueba"
-                X: =973
-                Y: =322
-                ZIndex: =39
-
-            Button1_1 As button:
-                OnSelect: |-
-                    =UpdateContext({
-                        popUpEnable: true,
-                        popUpMessage: "Testing"
-                    })
-                Text: ="Prueba2"
-                X: =1159
-                Y: =322
-                ZIndex: =40
 
         KANBANBOARD As dataCard.blankCard:
             BorderColor: =RGBA(0, 0, 0, 1)
@@ -2039,4 +2042,66 @@
             X: =855
             Y: =282
             ZIndex: =8
+
+    PopUpPlanningGroup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =14
+
+        PopUpAllArea_1 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.43)
+            Height: =680
+            Visible: =popUpPlanningEnable
+            Width: =1366
+            Y: =88
+            ZIndex: =9
+
+        PopUpContentArea_1 As rectangle:
+            Height: =636
+            Visible: =popUpPlanningEnable
+            Width: =469
+            X: =448
+            Y: =107
+            ZIndex: =10
+
+        PopUpTitleLabel_1 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Fill: =RGBA(56, 96, 178, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =71
+            Text: =popUpTitle
+            Visible: =popUpPlanningEnable
+            Width: =469
+            X: =448
+            Y: =272
+            ZIndex: =11
+
+        PopUpMessageLabel_1 As label:
+            Align: =Align.Center
+            Fill: =RGBA(255, 255, 255, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =586
+            Text: =popUpMessage
+            Visible: =popUpPlanningEnable
+            Width: =469
+            X: =448
+            Y: =157
+            ZIndex: =12
+
+        PopUpCloseIcon_1 As icon.Cancel:
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =50
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({
+                    popUpPlanningEnable: false
+                })
+            Visible: =popUpPlanningEnable
+            Width: =50
+            X: =855
+            Y: =107
+            ZIndex: =13
 
