--- a/src/Src/InstructionsView.fx.yaml
+++ b/src/Src/InstructionsView.fx.yaml
@@ -30,33 +30,33 @@ InstructionsView As screen:
         Height: =566
         Size: =16
         Text: |-
-            ="1. At the start of the game, each player’s tasks are placed in the BACKLOG column. 
+            ="1. At the start of the game, each player’s tasks are placed in the BACKLOG column.
             2. Select at least 2 tasks per SPRINT, unless there is only one task left to execute.
             3. When the token is placed in the PLANNING box, the tasks to be developed in the sprint must be moved to the ToDo column.
             4. When the token is placed in the DAILY box:
-              4.1. If the box is after a PLANNING box, move the tasks you decide to the In PROCESS column.
-              4.2. If the box is NOT after a PLANNING box, subtract 1 (-1) from the duration unit and draw a Daily type card.
-            5. If the duration unit (UD or SP) reaches 0, the task must be moved to the Review column.
-            6. If the task is in the Review column, draw a Daily Revision type card.
-            7. When the token is placed in the REFINEMENT box, draw a Refinement type card.
-            8. When the token is placed in the REVIEW box.
-            9. If all tasks (Task Cards) are in the COMPLETED column, you can reduce one day from one of the tasks you have in the BACKLOG column.
-            10. If there are tasks in columns other than COMPLETED, they must be returned to the Backlog column, if it is in the REVIEW column, add 1 (+1) to the duration unit.
-            11. When you place the token in the RETROSPECTIVE box, you can add 1 (+1) or subtract 1 (-1) to the duration unit of any of the tasks in any other player’s Backlog column.
-            12. If the person who asks for or gives FT already has their tasks completed in SPRINT, this action is omitted.
+              4.1 If the box is after a PLANNING box, move the tasks you decide to the In PROCESS column.
+              4.2 If the box is NOT after a PLANNING box, add 1 to the task counter in the duration unit and select a Daily type card.
+              4.3 If the duration unit (UD or SP) is less than or equal to zero, the task must be moved to the Review column.
+              4.4 If the task is in the Review column, draw a Daily Revision type card.
+            5. When the token is placed in the REFINEMENT box, draw a Refinement type card and update the Story Point of the task.
+            6. When the token is placed in the REVIEW box:
+              6.1 If all tasks (Task Cards) are in the COMPLETED column, you can reduce one day from one of the tasks you have in the BACKLOG column.
+              6.2 If there are tasks in columns other than COMPLETED, they must be returned to the Backlog column, if it is in the REVIEW column, add 1 (+1) to the duration unit.
+            7. When you place the token in the RETROSPECTIVE box, you can add 1 (+1) or subtract 1 (-1) to the duration unit of any of the tasks in any other player’s Backlog column.
+            8. If a person who requests or delivers FT already has their tasks completed in SPRINT, this action is omitted.
             
             "
-        Width: =973
-        X: =121
-        Y: =136
+        Width: =1006
+        X: =122
+        Y: =106
         ZIndex: =3
 
     Icon2 As icon.BookmarkFilled:
         Color: =RGBA(255, 255, 255, 1)
-        Height: =102
+        Height: =153
         Icon: =Icon.BookmarkFilled
-        Width: =105
-        X: =1128
-        Y: =543
+        Width: =141
+        X: =1143
+        Y: =489
         ZIndex: =5
 
