--- a/src/Src/BoardView.fx.yaml
+++ b/src/Src/BoardView.fx.yaml
@@ -33,12 +33,68 @@
             }
         );
 
+    "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+        DelayItemLoading: =true
+        Items: =GroupBy(Tasks,"team","name")
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplatePadding: =0
+        TemplateSize: =104
+        Visible: =false
+        X: =560
+        Y: =168
+        ZIndex: =1
+
+        Title1 As label:
+            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =ThisItem.team
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth - 173
+            X: =103
+            Y: =(Parent.TemplateHeight - (Self.Size * 1.8 + Subtitle1.Size * 1.8)) / 2
+            ZIndex: =2
+
+        Subtitle1 As label:
+            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: =LookUp(ThisItem.name,name = "Task B").name
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Title1.Width
+            X: =Title1.X
+            Y: =Title1.Y + Title1.Height
+            ZIndex: =3
+
+        Separator1 As rectangle:
+            Height: =8
+            OnSelect: =Select(Parent)
+            Width: =Parent.TemplateWidth
+            Y: =Parent.TemplateHeight - Self.Height
+            ZIndex: =5
+
+        Rectangle1 As rectangle:
+            Height: =Parent.TemplateHeight - Separator1.Height
+            OnSelect: =Select(Parent)
+            Visible: =ThisItem.IsSelected
+            Width: =4
+            ZIndex: =6
+
     Canvas2 As fluidGrid.fluidGridWithBlankCard:
         BorderThickness: =0
         Height: =680
         Width: =Parent.Width
         Y: =RectQuickActionBar2.Y + RectQuickActionBar2.Height
-        ZIndex: =3
+        ZIndex: =4
 
         PLAYBOARD As dataCard:
             BorderColor: =RGBA(0, 0, 0, 1)
@@ -662,7 +718,7 @@
                     Fill: =RGBA(250, 247, 157, 1)
                     Height: =85
                     Size: =25
-                    Text: ="Revision"
+                    Text: ="Review"
                     Width: =220
                     X: =792
                     Y: =16
@@ -699,7 +755,7 @@
                     Color: =RGBA(255, 255, 255, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =22
-                    Text: ="0"
+                    Text: =Index(Tasks, 1).counter
                     Width: =46
                     X: =142
                     Y: =114
@@ -711,7 +767,7 @@
                     Color: =RGBA(255, 255, 255, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =22
-                    Text: ="5"
+                    Text: =Index(Tasks, 1).SP
                     Width: =46
                     X: =188
                     Y: =114
@@ -723,7 +779,7 @@
                     Color: =RGBA(255, 255, 255, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =34
-                    Text: ="Task A"
+                    Text: =Index(Tasks, 1).name
                     Width: =92
                     X: =142
                     Y: =136
@@ -743,8 +799,10 @@
                     FontWeight: =FontWeight.Bold
                     Height: =22
                     Text: |-
-                        ="0
-                        "
+                        =LookUp(
+                            Filter(Tasks, team = 1),
+                            name = "Task A"
+                        ).counter
                     Width: =46
                     X: =249
                     Y: =114
@@ -756,7 +814,11 @@
                     Color: =RGBA(255, 255, 255, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =22
-                    Text: ="3"
+                    Text: |-
+                        =LookUp(
+                            Filter(Tasks, team = 1),
+                            name = "Task A"
+                        ).SP
                     Width: =46
                     X: =295
                     Y: =114
@@ -768,7 +830,11 @@
                     Color: =RGBA(255, 255, 255, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =34
-                    Text: ="Task B"
+                    Text: |-
+                        =LookUp(
+                            Filter(Tasks, team = 1),
+                            name = "Task B"
+                        ).name
                     Width: =92
                     X: =249
                     Y: =136
@@ -1970,14 +2036,14 @@
         RectQuickActionBar2 As rectangle:
             Height: =88
             Width: =Parent.Width
-            ZIndex: =1
+            ZIndex: =2
 
         LblAppName2 As label:
             Align: =Align.Center
             Height: =88
             Text: ="Board Game"
             Width: =Parent.Width
-            ZIndex: =2
+            ZIndex: =3
 
     PopUpGroup As group:
         Height: =5
@@ -1992,7 +2058,7 @@
             Visible: =popUpEnable
             Width: =1366
             Y: =88
-            ZIndex: =4
+            ZIndex: =5
 
         PopUpContentArea As rectangle:
             Height: =312
@@ -2000,7 +2066,7 @@
             Width: =469
             X: =448
             Y: =272
-            ZIndex: =5
+            ZIndex: =6
 
         PopUpTitleLabel As label:
             Align: =Align.Center
@@ -2013,7 +2079,7 @@
             Width: =469
             X: =448
             Y: =272
-            ZIndex: =6
+            ZIndex: =7
 
         PopUpMessageLabel As label:
             Align: =Align.Center
@@ -2025,7 +2091,7 @@
             Width: =469
             X: =448
             Y: =343
-            ZIndex: =7
+            ZIndex: =8
 
         PopUpCloseIcon As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
@@ -2041,14 +2107,14 @@
             Width: =50
             X: =855
             Y: =282
-            ZIndex: =8
+            ZIndex: =9
 
     PopUpPlanningGroup As group:
         Height: =5
         Width: =5
         X: =40
         Y: =40
-        ZIndex: =14
+        ZIndex: =18
 
         PopUpAllArea_1 As rectangle:
             Fill: =RGBA(0, 0, 0, 0.43)
@@ -2056,15 +2122,15 @@
             Visible: =popUpPlanningEnable
             Width: =1366
             Y: =88
-            ZIndex: =9
+            ZIndex: =10
 
         PopUpContentArea_1 As rectangle:
-            Height: =636
+            Height: =570
             Visible: =popUpPlanningEnable
             Width: =469
             X: =448
             Y: =107
-            ZIndex: =10
+            ZIndex: =11
 
         PopUpTitleLabel_1 As label:
             Align: =Align.Center
@@ -2077,18 +2143,6 @@
             Width: =469
             X: =448
             Y: =272
-            ZIndex: =11
-
-        PopUpMessageLabel_1 As label:
-            Align: =Align.Center
-            Fill: =RGBA(255, 255, 255, 1)
-            FontWeight: =FontWeight.Bold
-            Height: =586
-            Text: =popUpMessage
-            Visible: =popUpPlanningEnable
-            Width: =469
-            X: =448
-            Y: =157
             ZIndex: =12
 
         PopUpCloseIcon_1 As icon.Cancel:
@@ -2103,5 +2157,129 @@
             Width: =50
             X: =855
             Y: =107
-            ZIndex: =13
+            ZIndex: =14
+
+        "PlanningTasksGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+            DelayItemLoading: =true
+            Height: =419
+            Items: |-
+                =Filter(
+                    Tasks,
+                    team = currentTurn
+                )
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplatePadding: =0
+            TemplateSize: =104
+            Visible: =popUpPlanningEnable
+            Width: =380
+            X: =492
+            Y: =182
+            ZIndex: =15
+
+            Rectangle8 As rectangle:
+                Fill: =RGBA(255, 255, 255, 1)
+                OnSelect: =Select(Parent)
+                Width: =362
+                X: =5
+                ZIndex: =1
+
+            Rectangle4 As rectangle:
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =87
+                OnSelect: =Select(Parent)
+                Width: =140
+                X: =87
+                Y: =8
+                ZIndex: =2
+
+            PlanningNameLabel As label:
+                Align: =Align.Center
+                BorderThickness: =2
+                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                Height: =56
+                OnSelect: =Select(Parent)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.name
+                Width: =140
+                X: =87
+                Y: =39
+                ZIndex: =3
+
+            PlanningCounterLabel As label:
+                Align: =Align.Center
+                BorderThickness: =2
+                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                Height: =31
+                OnSelect: =Select(Parent)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.counter
+                Width: =70
+                X: =87
+                Y: =8
+                ZIndex: =4
+
+            NextArrow2 As icon.ChevronRight:
+                AccessibleLabel: =Self.Tooltip
+                Color: =RGBA(141, 198, 63, 1)
+                Height: =69
+                Icon: =Icon.CheckBadge
+                OnSelect: =
+                PaddingBottom: =16
+                PaddingLeft: =16
+                PaddingRight: =16
+                PaddingTop: =16
+                Tooltip: ="View item details"
+                Width: =62
+                X: =305
+                Y: =17
+                ZIndex: =5
+
+            PlanningSPLabel As label:
+                Align: =Align.Center
+                BorderThickness: =2
+                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                Height: =31
+                OnSelect: =Select(Parent)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.SP
+                Width: =70
+                X: =157
+                Y: =8
+                ZIndex: =6
+
+        player As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            FontWeight: =FontWeight.Bold
+            Text: |-
+                =Concatenate(
+                    "Turn of: ",
+                    LookUp(
+                        GamePlayers,
+                        id = currentTurn
+                    ).name
+                )
+            Visible: =popUpPlanningEnable
+            Width: =237
+            X: =560
+            Y: =128
+            ZIndex: =16
+
+        Button1 As button:
+            Fill: =RGBA(141, 198, 63, 1)
+            Text: ="Continue"
+            Visible: =popUpPlanningEnable
+            X: =603
+            Y: =617
+            ZIndex: =17
 
