--- a/src/Src/WelcomeView.fx.yaml
+++ b/src/Src/WelcomeView.fx.yaml
@@ -94,49 +94,57 @@ WelcomeView As screen:
                     team: 1,
                     SP: 5,
                     counter: 0,
-                    name: "Task A"
+                    name: "Task A",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 1,
                     SP: 5,
                     counter: 0,
-                    name: "Task B"
+                    name: "Task B",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 1,
                     SP: 5,
                     counter: 0,
-                    name: "Task C"
+                    name: "Task C",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 1,
                     SP: 5,
                     counter: 0,
-                    name: "Task D"
+                    name: "Task D",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 2,
                     SP: 5,
                     counter: 0,
-                    name: "Task A"
+                    name: "Task A",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 2,
                     SP: 5,
                     counter: 0,
-                    name: "Task B"
+                    name: "Task B",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 2,
                     SP: 5,
                     counter: 0,
-                    name: "Task C"
+                    name: "Task C",
+                    stage: TaskStageType.BACKLOG
                 },
                 {
                     team: 2,
                     SP: 5,
                     counter: 0,
-                    name: "Task D"
+                    name: "Task D",
+                    stage: TaskStageType.BACKLOG
                 }
             )
         );
