--- a/src/Src/BoardView.fx.yaml
+++ b/src/Src/BoardView.fx.yaml
@@ -3534,22 +3534,6 @@
         Y: =617
         ZIndex: =16
 
-    PopUpAllArea_2 As rectangle:
-        Fill: =RGBA(0, 0, 0, 0.43)
-        Height: =680
-        Visible: =popUpDailyEnable
-        Width: =1366
-        Y: =88
-        ZIndex: =17
-
-    PopUpContentArea_2 As rectangle:
-        Height: =570
-        Visible: =popUpDailyEnable
-        Width: =469
-        X: =448
-        Y: =107
-        ZIndex: =18
-
     PopUpPlanningGroup As group:
         Height: =5
         Width: =5
@@ -3742,101 +3726,176 @@
             Y: =128
             ZIndex: =15
 
-    PopUpCloseIcon_2 As icon.Cancel:
-        Color: =RGBA(255, 255, 255, 1)
-        Height: =50
-        Icon: =Icon.Cancel
-        OnSelect: |-
-            =UpdateContext({
-                popUpDailyEnable: false
-            })
-        Visible: =popUpDailyEnable
-        Width: =50
-        X: =855
-        Y: =107
-        ZIndex: =20
+    PopUpDailyGroup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =28
 
-    DailyTitle As label:
-        Align: =Align.Center
-        Color: =RGBA(255, 255, 255, 1)
-        FontWeight: =FontWeight.Bold
-        Text: |-
-            =Concatenate(
-                "Select your Tasks for this Sprint "
-            )
-        Visible: =popUpDailyEnable
-        Width: =237
-        X: =560
-        Y: =128
-        ZIndex: =22
+        PopUpAllArea_2 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.43)
+            Height: =680
+            Visible: =popUpDailyEnable
+            Width: =1366
+            Y: =88
+            ZIndex: =17
 
-    DailyPopUpVDivider As rectangle:
-        BorderColor: =RGBA(0, 0, 0, 1)
-        Fill: =RGBA(0, 0, 0, 1)
-        Height: =475
-        Visible: =popUpDailyEnable
-        Width: =2
-        X: =682
-        Y: =182
-        ZIndex: =23
+        PopUpContentArea_2 As rectangle:
+            Height: =570
+            Visible: =popUpDailyEnable
+            Width: =469
+            X: =448
+            Y: =107
+            ZIndex: =18
 
-    DailyToDoTasks As label:
-        Align: =Align.Center
-        Text: ="ToDo Tasks"
-        X: =492
-        Y: =182
-        ZIndex: =24
+        PopUpCloseIcon_2 As icon.Cancel:
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =50
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({
+                    popUpDailyEnable: false
+                })
+            Visible: =popUpDailyEnable
+            Width: =50
+            X: =855
+            Y: =107
+            ZIndex: =20
 
-    DailyInProcessTasks As label:
-        Text: ="In Process Tasks"
-        X: =722
-        Y: =182
-        ZIndex: =25
-
-    "DailyToDoTasksGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
-        DelayItemLoading: =true
-        Height: =435
-        Items: =GamePlayers
-        Layout: =Layout.Vertical
-        LoadingSpinner: =LoadingSpinner.Data
-        TemplatePadding: =0
-        TemplateSize: =104
-        Width: =210
-        X: =462
-        Y: =222
-        ZIndex: =26
-
-        DailyToDoTaskName As label:
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =25
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Text: =ThisItem.name
-            VerticalAlign: =VerticalAlign.Top
-            Width: =105
-            X: =52
-            Y: =10
-            ZIndex: =2
-
-        Separator2 As rectangle:
-            Height: =8
-            OnSelect: =Select(Parent)
-            Width: =Parent.TemplateWidth
-            Y: =Parent.TemplateHeight - Self.Height
-            ZIndex: =5
-
-        Dropdown3 As dropdown:
-            Height: =28
-            Items: |-
-                =Filter(
-                    Tasks,team = ThisItem.id && stage = TaskStageType.TODO
+        DailyTitle As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            FontWeight: =FontWeight.Bold
+            Text: |-
+                =Concatenate(
+                    "Select your Tasks for this Sprint "
                 )
-            OnSelect: =Select(Parent)
-            Width: =167
-            X: =21
-            Y: =46
-            ZIndex: =6
+            Visible: =popUpDailyEnable
+            Width: =237
+            X: =560
+            Y: =128
+            ZIndex: =22
+
+        DailyPopUpVDivider As rectangle:
+            BorderColor: =RGBA(0, 0, 0, 1)
+            Fill: =RGBA(0, 0, 0, 1)
+            Height: =475
+            Visible: =popUpDailyEnable
+            Width: =2
+            X: =682
+            Y: =182
+            ZIndex: =23
+
+        DailyToDoTasks As label:
+            Align: =Align.Center
+            Text: ="ToDo Tasks"
+            Visible: =popUpDailyEnable
+            X: =492
+            Y: =182
+            ZIndex: =24
+
+        DailyInProcessTasks As label:
+            Text: ="In Process Tasks"
+            Visible: =popUpDailyEnable
+            X: =722
+            Y: =182
+            ZIndex: =25
+
+        "DailyToDoTasksGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+            DelayItemLoading: =true
+            Height: =435
+            Items: =GamePlayers
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplatePadding: =0
+            TemplateSize: =104
+            Visible: =popUpDailyEnable
+            Width: =210
+            X: =462
+            Y: =222
+            ZIndex: =26
+
+            DailyToDoTaskName As label:
+                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                Height: =25
+                OnSelect: =Select(Parent)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.name
+                VerticalAlign: =VerticalAlign.Top
+                Width: =105
+                X: =52
+                Y: =10
+                ZIndex: =2
+
+            Separator2 As rectangle:
+                Height: =8
+                OnSelect: =Select(Parent)
+                Width: =Parent.TemplateWidth
+                Y: =Parent.TemplateHeight - Self.Height
+                ZIndex: =5
+
+            Dropdown3 As dropdown:
+                Default: ="Select an option"
+                Height: =28
+                Items: |-
+                    =Filter(
+                        Tasks,team = ThisItem.id && stage = TaskStageType.TODO
+                    )
+                OnSelect: =Select(Parent)
+                Width: =167
+                X: =21
+                Y: =46
+                ZIndex: =6
+
+        "DailyInProcessTasksGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+            DelayItemLoading: =true
+            Height: =435
+            Items: =GamePlayers
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplatePadding: =0
+            TemplateSize: =104
+            Visible: =popUpDailyEnable
+            Width: =210
+            X: =692
+            Y: =222
+            ZIndex: =27
+
+            DailyInProcessTaskName As label:
+                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                Height: =25
+                OnSelect: =Select(Parent)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.name
+                VerticalAlign: =VerticalAlign.Top
+                Width: =105
+                X: =52
+                Y: =10
+                ZIndex: =2
+
+            DailyInProcessTask As rectangle:
+                Height: =8
+                OnSelect: =Select(Parent)
+                Width: =Parent.TemplateWidth
+                Y: =Parent.TemplateHeight - Self.Height
+                ZIndex: =5
+
+            DailyInProcessTaskDropdown As dropdown:
+                Height: =28
+                Items: |-
+                    =Filter(
+                        Tasks,team = ThisItem.id && stage = TaskStageType.IN_PROCESS
+                    )
+                OnSelect: =Select(Parent)
+                Width: =167
+                X: =21
+                Y: =46
+                ZIndex: =6
 
