--- a/src/Src/WelcomeView.fx.yaml
+++ b/src/Src/WelcomeView.fx.yaml
@@ -1,4 +1,6 @@
 WelcomeView As screen:
+    BackgroundImage: ='Logo Juegos gaming moderno azul y violeta'
+    Fill: =RGBA(0, 0, 0, 1)
     OnVisible: |+
         =// Start temporal players config
         ClearCollect(
@@ -158,42 +160,14 @@ WelcomeView As screen:
             )
         Text: ="SELECT PLAYERS"
         Width: =179
-        X: =1121
+        X: =856
         Y: =680
         ZIndex: =3
 
     InstructionButton As button:
         OnSelect: =Navigate(InstructionsView, ScreenTransition.CoverRight);
         Text: ="INSTRUCTIONS"
-        X: =50
+        X: =363
         Y: =680
         ZIndex: =4
-
-    GameTitle As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =5
-
-        Rectangle2 As rectangle:
-            Height: =216
-            Width: =388
-            X: =472
-            Y: =144
-            ZIndex: =1
-
-        Title As label:
-            Align: =Align.Center
-            Color: =RGBA(255, 255, 255, 1)
-            FontWeight: =FontWeight.Bold
-            Height: =216
-            Size: =32
-            Text: |-
-                ="SCRUMBAN
-                GAME"
-            Width: =388
-            X: =472
-            Y: =144
-            ZIndex: =2
 
